# adukhan99.github.io

./: .gitignore  README.md  index.html  resume.html  test.ml
.github/workflows/: deploy.yml
.vercel/: project.json
assets/: resume.html
css/: resume.css  style.css  utilities.css
js/: dune  script.js
src/: dune  logic.ml  main.ml  physics.ml  resume.ml  style.ml  ui.ml
